# corsica-ci

./: README.md  pyproject.toml
src/CORSICA/: artifact_reduction.py
src/ci_artifact_reduction.egg-info/: PKG-INFO
src/cors_ica.egg-info/: PKG-INFO  SOURCES.txt
src/corsica_ci_artifact_reduction.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.py
