[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corsica-ci"
version = "0.0.1"
description = "Package to reduce artifacts in eeg from cochlear implant stimuli"
readme = {file = "README.md", content-type = "text/markdown"}

license = {text = "MIT"} 

authors = [
  { name = "Constantin Jehn", email = "constantin.jehn@fau.de" },
  { name = "Leonie Richter", email = "leonie.f.richter@fau.de" }
]

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "mne"
]


requires-python = ">=3.12"

keywords = [
  "eeg",
  "ci",
  "cochlear-implant",
  "artifact-rejection"
]

[project.urls]
Repository = "https://github.com/LeonieRichterFAU/cors-ica"
Dataset = "https://zenodo.org/records/17952844"
Paper = "https://doi.org/10.1088/1741-2552/addb7b"



